--- a/.gitignore
+++ b/.gitignore
@@ -11,9 +11,9 @@ venv/
 .ipynb_checkpoints/
 
 # Large data files
-annotated_seqs/*.csv
-annotated_seqs/**/*.csv
+annotated_seqs/
 *.csv
+**/*.csv
 
 # Model weights and large binary files
 *.h5
